reflect-demo/tests/errors/invalid_reflect_attributes.rs
#[derive(serde::Deserialize, reflect_derive::Reflect)]
struct MyStruct {
    #[reflect(unknown_attributes)]
    field: u32,
}

fn main() {}
